Closed Bug 1557243 Opened 5 years ago Closed 5 years ago

Crash in [@ InterruptCallback]

Categories

(Core :: DOM: Navigation, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox67 --- unaffected
firefox67.0.1 --- unaffected
firefox68 --- unaffected
firefox69 --- fixed

People

(Reporter: calixte, Assigned: squib)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-4903aedd-eda8-4672-860e-56a930190606.

Top 10 frames of crashing thread:

0 xul.dll static bool InterruptCallback dom/ipc/ProcessHangMonitor.cpp:1213
1 xul.dll JSContext::handleInterrupt js/src/vm/Runtime.cpp:517
2 xul.dll static bool Interpret js/src/vm/Interpreter.cpp:2083
3 xul.dll js::RunScript js/src/vm/Interpreter.cpp:425
4 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:568
5 xul.dll js::Call js/src/vm/Interpreter.cpp:611
6 xul.dll js::ForwardingProxyHandler::call js/src/proxy/Wrapper.cpp:162
7 xul.dll js::CrossCompartmentWrapper::call js/src/proxy/CrossCompartmentWrapper.cpp:237
8 xul.dll js::Proxy::call js/src/proxy/Proxy.cpp:504
9 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:514

There are 9 crashes (from 9 installations) in nightly 69 starting with buildid 20190604214415. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1552017.

[1] https://hg.mozilla.org/mozilla-central/rev?node=04d9dba72f22

Flags: needinfo?(jporter+bmo)

:calixte, do we have any other crash reports with different stacks? This one seems to get cut off a bit early. While the top frame is definitely close to my patch (see https://searchfox.org/mozilla-central/rev/153172de0c5bfca31ef861bd8fc0995f44cada6a/dom/ipc/ProcessHangMonitor.cpp#1213), it wasn't changed in bug 1552017, and I don't see how that line itself could cause a crash. If we have a stack with a couple more frames, it'd be a lot easier to figure out what's causing the crash.

Flags: needinfo?(jporter+bmo) → needinfo?(cdenizet)

This is the only line that jumps out to me as suspicious in my patch: https://searchfox.org/mozilla-central/rev/153172de0c5bfca31ef861bd8fc0995f44cada6a/dom/ipc/ProcessHangMonitor.cpp#419

I'll post a fix for this, but a more-complete backtrace would still help a lot to confirm that this is the issue..

So in getting crashes which contains "InterruptCallback" in their proto-signatures for the concerned buildids, I get these reports:
https://mzl.la/2MM1D6j
Just have a look in the proto-signature facet and you'll find few crash reports with more frames.

Flags: needinfo?(cdenizet)

This patch just adds a check to ensure that the BrowserChild from our window
is non-null. The other changes are just reordering some lines and removing a
level of indentation.

Pushed by jporter@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2d4545c274d7
Fix crash in HangMonitorChild::InterruptCallback; r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Assignee: nobody → jporter+bmo
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: