Bug 1557243 - Fix crash in HangMonitorChild::InterruptCallback; r=smaug

This patch just adds a check to ensure that the BrowserChild from our window
is non-null. The other changes are just reordering some lines and removing a
level of indentation.

Differential Revision: https://phabricator.services.mozilla.com/D34005

--HG--
extra : moz-landing-system : lando